--- a/app/index.html
+++ b/app/index.html
@@ -13,15 +13,34 @@
 
 <body>
     <div class="container-fluid">
-        <div class="row">
+        <div class="row mt-4">
 
             <!-- Tile Drawing Canvas Column -->
-            <div class="col-7" style="text-align: center">
-                <div class="form-group">
-                    <label for="tileCanvasZoom">Zoom</label>
-                    <input type="range" class="form-control-range" id="tileCanvasZoom" min="30" max="100" value="70">
+            <div class="col-7">
+                <div class="row">
+                    <div class="col">
+                        <div class="btn btn-group">
+                            <button id="gridButton" class="btn" data-toggle="tooltip" data-placement="top"
+                                title="Toggle Grid">🏁</button>
+                            <button id="clearButton" class="btn btn-light" data-toggle="tooltip" data-placement="top"
+                                title="Clear Grid">❌</button>
+                        </div>
+
+                    </div>
                 </div>
-                <canvas id="tileCanvas" class="border border-dark"></canvas>
+
+                <div class="row mt-4 overflow-auto">
+                    <div class="col-1">
+                        <div class="form-group">
+                            <label for="tileCanvasZoom">🔎</label>
+                            <input type="range" orient="vertical" class="form-control-range" id="tileCanvasZoom"
+                                min="30" max="100" value="70">
+                        </div>
+                    </div>
+                    <div class="col" style="text-align: center">
+                        <canvas id="tileCanvas" class="border border-dark"></canvas>
+                    </div>
+                </div>
             </div>
 
             <!-- Color Picker Columm -->
@@ -46,7 +65,7 @@
             <div class="col-3">
 
                 <div class="row">
-                    <div class="col">
+                    <div class="col-6">
 
                         <div class="form-group">
                             <label for="tileWidth">Tile Width</label>
@@ -54,7 +73,7 @@
                         </div>
 
                     </div>
-                    <div class="col">
+                    <div class="col-6">
 
                         <div class="form-group">
                             <label for="tileHeight">Tile Height</label>
@@ -65,26 +84,32 @@
                 </div>
 
                 <div class="row">
-                    <div class="col">
-
-                        <div class="form-group">
-                            <label for="numXTiles">Number of tiles on X axis</label>
-                            <input type="number" class="form-control" id="numXTiles" min="1" value="1" disabled>
+                    <div id="columnsInput" class="col-6">
+                        <label for="numXTiles">Columns</label>
+                        <div class="input-group">
+                            <input type="number" class="form-control inputBox" id="numXTiles" min="1" value="1" disabled>
+                            <div class="input-group-append">
+                                <button class="btn btn-success plus" type="button">+</button>
+                                <button class="btn btn-danger minus" type="button">-</button>
+                            </div>
                         </div>
 
                     </div>
-                    <div class="col">
-
-                        <div class="form-group">
-                            <label for="numYTiles">Number of tiles on Y axis</label>
-                            <input type="number" class="form-control" id="numYTiles" min="1" value="1" disabled>
+                    <div id="rowsInput" class="col-6">
+                        <label for="numYTiles">Rows</label>
+                        <div class="input-group">
+                            <input type="number" class="form-control inputBox" id="numYTiles" min="1" value="1" disabled>
+                            <div class="input-group-append">
+                                <button class="btn btn-success plus" type="button">+</button>
+                                <button class="btn btn-danger minus" type="button">-</button>
+                            </div>
                         </div>
 
                     </div>
                 </div>
 
                 <div class="row">
-                    <div class="col">
+                    <div class="col-12">
                         <div class="form-group">
                             <label for="exampleFormControlFile1">Select tileset file</label>
                             <input type="file" class="form-control-file" id="exampleFormControlFile1">
@@ -93,19 +118,18 @@
                 </div>
 
                 <div class="row">
-                    <div class="col">
+                    <div class="col-12">
                         <button class="btn btn-success btn-block" id="saveTileset">Save Tilset</button>
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="col">
-                        <canvas id="tilesetCanvas" class="border border-primary rounded-lg w-100"></canvas>
+                <div class="row mt-4">
+                    <div class="col-12">
+                        <canvas id="tilesetCanvas" class="border border-dark w-100"></canvas>
                     </div>
                 </div>
+
             </div>
-
-
         </div>
     </div>
 </body>
